# linux-system-utils

./: .gitignore  AGENTS.md  LICENSE  README.md  deploy.sh  install.sh  stow.sh  todo.md
audio/: mediaplayer.py  sink-change.sh
automation/: add-missing-i18n-variables.js  add_missing_i18n_variables.py  clean-sp-backups.sh  coding_workflow.sh  copy-repos-to-vm.sh  rename_spaces.sh
backup/: home-borgbackup.sh  laptop-boot_borgbackup.sh  rsync-desktop-to-laptop.sh  rsync-exclude.txt  rsync-ssh.sh  rsync.sh
backup/basic-rsync/: main.bash
backup/borg-backup/: laptop-home_borgbackup.sh
backup/rsync-script/: exclude_files.txt  main.bash  test.bash
containers/autopenguinsetup_container/: Dockerfile.debian  manage.sh
containers/dev_environment/: docker-compose.yml
display/configs/: xorg_04-06-25.conf  xorg_2_monitor_setup.conf
display/layouts/: asus_only.sh  laptop-xrandr.sh  two_mon.sh
docs/: change_username_home.md  linutil_todos.org  machine-temp-infos.md  md_to_org.md  polybar.md  subprocess_run_best_practices.md  todo.md
fedora/: dnf-update-status.py  wakeonlan.wol
games/: fs_mod_move.sh
general/: autologin.conf  gc_cache.sh  sha512_sum.sh  skip-prompt.conf  sudoers.bak  syncthing.service  write_file.py  write_file.sh
github/: changelog.bash  changelog.sh  copy-dot-github.sh  copy_agents.sh  pyproject_aps.toml
github/.github/ISSUE_TEMPLATE/: bug_report.md
network/: network_test.sh
nvidia/: nfancurve.service  readme.md
nvidia/opt/nfancurve/: config  temp.sh
package-management/: arch-app-install.sh  fedora-flatpak-status.sh  fedora-package-manager.sh  fedora_flatpak_status.py  update-dnf-flatpak.sh
power/: idle.sh  swaylock.sh
screenloyout/: 20-nvidia.conf  xorg-nvidia-open_new.conf  xrandr-movie.sh
src/audio/: mediaplayer.py  sink-change.sh
src/automation/: add-xml-missing-variables.py  copy-dirs-to-dirs.sh  copy-repos-to-vm.sh  write-missing-variables-tr.js
src/backup/basic-rsync/: exclude_files.txt
src/containers/Qdrant/: docker-compose.yml
src/containers/adventureland/: docker-compose.yml
src/containers/autopenguinsetup_container/: Dockerfile.arch  Dockerfile.fedora  README.md  podman-compose.yml
src/display/: arandr_new.sh  laptop-xrandr.sh  tv-xrandr.sh  xrandr-movie.sh  xrandr-root.sh
src/games/: fs_mod_move.sh
src/general/: json_to_csv.py  remove-html-tag.py  sha512_sum.sh  write_file.py  write_file.sh
src/github/: changelog.sh  copy-dot-github.sh  copy_agents.sh  prune-local-branch.sh  pull_specific_branch_specific_folder.sh  remove_cache.sh
src/github/.github/ISSUE_TEMPLATE/: feature_request.md
src/github/data/: AGENTS_bash.md  AGENTS_python.md  another_AGENTS.md  new_AGENTS.md  pyproject.toml  pyproject_aps2.toml  pyproject_my_unicorn.toml
src/hardware/: bluetooth_devices.sh
src/migration/: md_to_org.py
src/network/: poweroff_fedora.sh  wake_fedora.sh
src/package-management/: arch-package-manager.sh  fedora-package-manager.sh  fwupd.sh
src/power/: swaylock_sleep.sh
src/system/: setup-tty.sh
src/system/info/: cpu_mem_info.sh  date_time.sh  storage.sh  temp.sh
src/virt/: copy-repos-to-vm.sh  setup-vm.sh
src/web-scrapping/: scrap.py
src/web-scrapping/docs.astral.sh/: #creating-a-python-script.md
src/web-scrapping/docs.pytest.org/: pythonpath.html#import-modes.md
src/web-scrapping/docs.python.org/: logging-cookbook.html#.md
src/website/: stow.sh
system-info/: storage.sh
system/info/: storage.sh
tests/fixtures/markdown-todos/: comprehensive.md  docs_todo.md  todo.md
tests/py/: conftest.py  test_md_to_org.py
tests/py/e2e/: conftest.py  test_e2e_md_to_org.py
web-scrapping/: requirements.txt  scrap.py
web-scrapping/refactoring.guru/: replace-temp-with-query.md
