[project]
name = "auto-penguin-setup"
version = "0.2.0-alpha"
license = { text = "BSD-3-Clause" }
description = "Automated Linux setup tool supporting Fedora, Arch, and Debian-based systems"
keywords = ["linux", "automation", "setup", "package-manager"]
requires-python = ">=3.12"
authors = [{ name = "Cyber-Syntax" }]
dependencies = ["orjson"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
repository = "https://github.com/Cyber-Syntax/auto-penguin-setup"
issues = "https://github.com/Cyber-Syntax/auto-penguin-setup/issues"
changelog = "https://github.com/Cyber-Syntax/auto-penguin-setup/blob/main/CHANGELOG.md"
funding = "https://github.com/sponsors/Cyber-Syntax"
documentation = "https://github.com/Cyber-Syntax/auto-penguin-setup#readme"

[project.scripts]
aps = "aps.main:main"

[dependency-groups]
dev = ["pytest", "pytest-cov"]
lint = ["ruff"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true
required-environments = ["sys_platform == 'linux'"]

[tool.uv.dependency-groups]
dev = { requires-python = ">=3.12" }

[tool.setuptools]
# Include config files as package data.
include-package-data = true

[tool.setuptools.exclude-package-data]
aps = ["README.md"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["aps*"]
exclude = ["autocomplete*", "tests*", "scripts*", "docs*", "examples*"]

# [tool.setuptools.package-data]
# aps = ["configs/**"]

[tool.pytest.ini_options]
addopts = "-vq"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src/aps"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py312"
src = ["src", "tests"]
# Ignoring E203 due to https://github.com/PyCQA/pycodestyle/issues/373.
ignore = ["E203"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "__init__.py",
]

[tool.ruff.lint]
extend-select = [
  "F",   # Pyflakes rules
  "W",   # PyCodeStyle warnings
  "E",   # PyCodeStyle errors
  "I",   # Sort imports properly
  "UP",  # Warn if certain things can changed due to newer Python versions
  "C4",  # Catch incorrect use of comprehensions, dict, list, etc
  "FA",  # Enforce from __future__ import annotations
  "ISC", # Good use of string concatenation
  "ICN", # Use common import conventions
  "RET", # Good return practices
  "SIM", # Common simplification rules
  "TID", # Some good import practices
  "TC",  # Enforce importing certain types in a TYPE_CHECKING block
  "PTH", # Use pathlib instead of os.path
  "TD",  # Be diligent with TODO comments
  "NPY", # Some numpy-specific things
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
